clusters/unifyops-home/namespaces/uo-staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uo-staging
  labels:
    name: uo-staging
